# stochastic-windows-storm

./: CMakeLists.txt  README.md
case-studies/phil-nofair/: phil-nofair3-bwmp-sched.txt  phil-nofair3-dfwmp5-sched.txt  phil-nofair3-dfwpar5-sched.txt  phil-nofair3.nm  phil-nofair4-bwpar-sched.txt  phil-nofair4-fwmp5-sched.txt  phil-nofair4.nm  phil-nofair5.nm
case-studies/rabin/: rabin3-bwpar-sched.txt  rabin3.nm  rabin4.nm
stochastic-windows/: BndGoodWindowMP.cpp  BndGoodWindowMP.h  CMakeLists.txt  CMakeLists2.txt  ECsUnfolding.cpp  ECsUnfolding.h  FixedWindow.cpp  FixedWindow.h  FooBar.cpp  FooBar.h  StochasticWindows.cpp  StochasticWindows.h  WindowObjective.cpp  WindowObjective.h
stochastic-windows-cli/: CMakeLists.txt  main-sw-dev.cpp  stormwind.cpp
stochastic-windows/boundedwindow/: BoundedWindowObjective.cpp  BoundedWindowObjective.h  MaximalEndComponentClassifier.cpp  MaximalEndComponentClassifier.h
stochastic-windows/directfixedwindow/: DirectFixedWindowObjective.cpp  DirectFixedWindowObjective.h  UnfoldingMeanPayoff.cpp  UnfoldingMeanPayoff.h  WindowUnfolding.cpp  WindowUnfolding.h
stochastic-windows/fixedwindow/: ECsUnfoldingMeanPayoff.cpp  ECsUnfoldingMeanPayoff.h  FixedWindowObjective.cpp  FixedWindowObjective.h  MECsUnfolding.cpp  MECsUnfolding.h  MaximalEndComponentClassifier.cpp  MaximalEndComponentClassifier.h  MaximalEndComponentDecompositionWindowGame.cpp  MaximalEndComponentDecompositionWindowGame.h  MeanPayoff.cpp  MeanPayoff.h
stochastic-windows/game/: MdpGame.cpp  MdpGame.h  PredecessorsSquaredLinkedList.cpp  PredecessorsSquaredLinkedList.h  TotalPayoffGame.cpp  TotalPayoffGame.h  WeakParityGame.cpp  WeakParityGame.h  WindowGame.cpp  WindowGame.h
stochastic-windows/prefixindependent/: MaximalEndComponentClassifier.cpp  MaximalEndComponentClassifier.h  MaximalEndComponentDecompositionUnfolding.cpp  MaximalEndComponentDecompositionUnfolding.h  MaximalEndComponentDecompositionWindowGame.cpp  MaximalEndComponentDecompositionWindowGame.h
stochastic-windows/settings/modules/: StochasticWindowsSettings.cpp  StochasticWindowsSettings.h
stochastic-windows/util/: Graphviz.h  SchedulerProduct.cpp  SchedulerProduct.h
stochastic-windows/util/case-studies/phil-nofair/: phil-nofair3-fwmp5-sched.txt  phil-nofair3-fwpar5-sched.txt  phil-nofair3.nm  phil-nofair4.nm  phil-nofair5.nm
stochastic-windows/util/graphviz-examples/: dfwMemory.prism  export_dot_pdf.sh  mdp.dot  mdp_unfoldedEC_1.dot  mdp_unfoldedEC_2.dot  window_mp_par.prism  window_mp_par_2.prism
storm-parsers/parser/: NondeterministicSparseTransitionParser.cpp
storm/storage/: Scheduler.cpp
storm/storage/memorystructure/: MemoryStructure.cpp  MemoryStructure.h  MemoryStructureBuilder.cpp  MemoryStructureBuilder.h
test/: CMakeLists.txt
test/stochastic-windows/: CMakeLists.txt  storm-test.cpp
test/stochastic-windows/games/: AttractorsTest.cpp  TotalPayoffGamesTest.cpp
test/stochastic-windows/objectives/: SchedulerTest.cpp  WindowObjectivesTest.cpp
test/stochastic-windows/resources/lab/: dfwMPGame.choicelab  dfwMPGame.lab
test/stochastic-windows/resources/mdp/: window_mp_par.nm  window_par_memory_example.nm
test/stochastic-windows/resources/rew/: dfwMPGame.trans.rew
test/stochastic-windows/resources/tra/: dfwMPGame.tra
